2007-03-12  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GtkNSSDialogs.cpp:

	Add translator's comment for 'token'.

2007-03-11  Christian Persch  <chpe@gnome.org>

	* *:

	Correct FSF address. Bug #409075, patch by John Millikin.

2007-03-11  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Post-release version bump.

2007-03-11  Christian Persch  <chpe@gnome.org>

	=== Release 2.18.0 ===

2007-03-11  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Set version to 2.18.0.

2007-03-11  Christian Persch  <chpe@gnome.org>

	* embed/Makefile.am:
	* lib/Makefile.am:
	* lib/egg/Makefile.am:
	* src/Makefile.am:
	* src/bookmarks/Makefile.am:

	Regenerate the type builtins when the Makefile changes. Should fix bug
	#416994; no code freeze break since it's only fixing a build problem.

2007-03-07  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* data/bme.desktop.in.in:
	* data/epiphany.desktop.in.in:

	"Application" is not a valid category in the freedesktop specification.

2007-03-04  Christian Persch  <chpe@svn.gnome.org>

	* src/ephy-net-monitor.c: (ephy_net_monitor_check_network),
	(ephy_net_monitor_startup):

	Don't crash when we cannot access the system bus. Bug #404514, patch
	by Jan de Groot.

2007-03-03  Christian Persch  <chpe@svn.gnome.org>

	* embed/Makefile.am:
	* lib/Makefile.am:
	* lib/egg/Makefile.am:
	* src/Makefile.am:
	* src/bookmarks/Makefile.am: Make sure the type builtins are
	regenerated when the Makefile changes.

2007-03-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* embed/Makefile.am:
	* embed/ephy-adblock-manager.c: (ephy_adblock_manager_should_load):
	* embed/ephy-adblock-manager.h:
	* embed/ephy-adblock.c: (ephy_adblock_should_load):
	* embed/ephy-adblock.h:
	* embed/mozilla/EphyContentPolicy.cpp:
	* lib/Makefile.am:
	* lib/ephy-adblock.c:
	* lib/ephy-adblock.h:

	Move ephy-adblock.* to embed. Change the API to pass EphyEmbed to
	should_load. This is needed to fix bug #348331.
