@@ -1,3 +1,10 @@
+2007-03-16  Bastien Nocera  <hadess@hadess.net>
+
+	* embed/mozilla/Makefile.am:
+	* embed/mozilla/mozilla-embed-single.cpp:
+	Fix Epiphany not finding some Gecko plugins when
+	running in a multilib environment (Closes: #407419)
+
 2007-03-12  Christian Persch  <chpe@gnome.org>
 
 	* embed/mozilla/GtkNSSDialogs.cpp:
